styles/globals.less
@import './theme.less';

/* Section container */
.ant-layout {
	/* Header */
	.ant-layout-header {
		height: auto;
		background-color: @banner-background;
		background-image: linear-gradient(
			to top,
			fade(@banner-background, 30) 0%,
			fade(@banner-background-gradient, 30) 100%
		);

		/* Navigation Container */
		.nav-container {
			width: 100%;
			padding: 0 50px;

			/* Logo */
			.logo-container {
				width: 120px;
				height: 64px;

				a {
					& > div {
						overflow: visible !important;

						.logo {
							margin-top: 12px !important;
						}
					}
				}
			}

			/* Mobile Navigation toggle */
			.nav-toggle {
				width: 16px;
				height: 24px;
				cursor: pointer;
				position: absolute;
				top: 24px;
				right: 0px;
				z-index: 100;

				em {
					display: block;
					width: 100%;
					height: 2px;
					background: #001529;
					margin-top: 4px;
					transition: transform 0.3s @ease-in-out, opacity 0.3s @ease-in-out;
				}
			}

			/* Navigation Bar */
			.navbar {
				border-bottom: none;
				background-color: rgba(255, 255, 255, 0);

				li:nth-child(2) {
					margin-left: 0px;
				}

				li:nth-last-child(2) {
					margin-right: 0px;
				}

				&.mobile-nav {
					background-color: @layout-body-background;
					position: absolute;
					visibility: hidden;
					opacity: 0;
					transition: opacity 0.3s @ease-in-out;
				}
			}

			/* Mobile navigation open */
			&.open {
				.nav-toggle {
					em {
						&:nth-child(1) {
							transform: translateY(6px) rotate(45deg);
						}

						&:nth-child(2) {
							opacity: 0;
						}

						&:nth-child(3) {
							transform: translateY(-6px) rotate(-45deg);
						}
					}
				}

				.navbar {
					visibility: visible;
					opacity: 1;
					pointer-events: auto;
				}
			}
		}

		/* Page banner Large*/
		.page-banner-lg-wrapper {
			width: 100%;
			height: 80vh;
			margin-top: @margin-2;
			position: relative;
			overflow: hidden;

			.page-banner-lg {
				padding: 1px 0 0;
				height: 100%;

				.image-wrapper {
					overflow: hidden;
					position: absolute;
					width: 100%;
					height: 100%;

					&::after {
						content: '\A';
						position: absolute;
						width: 100%;
						height: 100%;
						top: 0;
						left: 0;
						background: rgba(0, 0, 0, 0.5);
						transition: all 1s;
						-webkit-transition: all 1s;
					}
				}

				.content-wrapper {
					position: relative;
					width: 100%;
					height: 100%;
					text-align: center;

					.ant-space-vertical {
						height: 100%;
						justify-content: center;
					}

					.title {
						color: @primary-color;
						text-transform: uppercase;
					}

					.tagline {
						color: @white;
						text-transform: uppercase;
					}

					.content {
						text-transform: uppercase;
						font-size: 18px;
						color: @white;
						margin-bottom: 48px;
					}
				}
			}
		}

		/* Page banner Small*/
		.page-banner-sm-wrapper {
			width: 100%;
			height: 200px;
			margin-top: @margin-2;
			position: relative;
			overflow: hidden;

			.page-banner-sm {
				padding: 1px 0 0;
				height: 100%;

				.image-wrapper {
					overflow: hidden;
					position: absolute;
					width: 100%;
					height: 100%;

					&::after {
						content: '\A';
						position: absolute;
						width: 100%;
						height: 100%;
						top: 0;
						left: 0;
						background: rgba(0, 0, 0, 0.8);
						transition: all 1s;
						-webkit-transition: all 1s;
					}
				}

				.content-wrapper {
					position: relative;
					width: 100%;
					height: 100%;
					text-align: center;

					.ant-space-vertical {
						height: 100%;
						justify-content: center;
					}

					.title {
						color: @primary-color;
						text-transform: uppercase;
					}
				}
			}
		}
	}

	/* Main content */
	.ant-layout-content {
		/* Breadcrumb */
		.ant-breadcrumb {
			padding: 30px 50px;

			.ant-breadcrumb-link {
				a {
					color: rgba(0, 0, 0, 0.65);

					&:hover {
						color: @primary-color;
					}
				}
			}
		}

		/* Page Content */
		.site-layout-content {
			min-height: 280px;
		}
	}

	/* Footer */
	.ant-layout-footer {
		text-align: left;
		padding: 0px;
		background-color: @section-background-dark;

		.social-container {
			background-color: @section-background-dark-1;
			padding: 0px 50px;
			text-align: right;
			min-height: 66.63px;

			.anticon {
				font-size: 35px;
				margin-left: @margin-1;
				color: @text-color-light;

				&:hover {
					color: @white;
				}
			}
		}

		.links-container {
			padding: @section-padding;
			min-height: 368px;

			.footer-title {
				color: @text-color-light;
				margin-bottom: 24px;
			}

			.footer-link {
				color: @text-color-light-secondary;
				display: block;
				padding: 10px 0;
				border-bottom: 1px solid #444444;

				&:hover {
					color: @text-color-light;
				}
			}

			a {
				color: @text-color-light-secondary;

				&:hover {
					color: @text-color-light;
				}
			}

			.footer-text {
				color: @text-color-light-secondary;
				display: block;
				padding: 10px 0;
				border-bottom: 1px solid #444444;
			}

			.anticon {
				margin-right: @margin-3;
			}
		}

		.copyright-container {
			background-color: @section-background-dark-1;
			padding: 0px 50px;
			text-align: center;
			min-height: 55px;

			.ant-row {
				margin-bottom: 0px !important;

				span {
					color: @text-color-light;
				}
			}
		}
	}
}

/* Inspection Form Section */
.inspection-container {
	padding: @section-padding;
	min-height: 961px;

	.inspection-title {
		text-align: center;
		margin-bottom: 60px;

		span {
			color: @primary-color;
		}
	}
}

/* Services Section */
.services-container,
.damage-container {
	padding: @section-padding;
	min-height: 599px;

	.title {
		text-align: center;
		margin-bottom: 60px;

		span {
			color: @primary-color;
		}
	}

	.content {
		.ant-col {
			&:hover {
				background-color: #f0f0f0;
				box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12),
					0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 9px 28px 8px rgba(0, 0, 0, 0.05);

				img {
					transform: scale(1.1);
				}
			}

			.block {
				.img-wrapper {
					display: flex;
					justify-content: center;
					flex-direction: column;
					align-items: center;
					min-height: 110px;
					margin-bottom: @margin-3;

					div {
						overflow: hidden;

						img {
							transition: all 0.36s ease-out;
						}
					}
				}

				.btn-wrapper {
					text-align: center;

					.app-btn-lg {
						font-weight: 500;
						min-height: 65px;
						min-width: 217px;
					}
				}
			}
		}
	}
}

/* Show full heading of card */
.full-head {
	.ant-card-head-title {
		overflow: visible;
		white-space: normal;
	}
}

/* Ask Experts Form Section */
.ask-experts-container {
	padding: @section-padding;
	min-height: 755px;

	.title {
		text-align: center;
		margin-bottom: 60px;

		span {
			color: @primary-color;
		}
	}
}

/* Awards Section */
.award-container {
	padding: @section-padding;
	min-height: 645px;

	.title {
		text-align: center;
		margin-bottom: 60px;

		span {
			color: @primary-color;
		}
	}

	.content {
		.ant-card-bordered {
			.ant-card-cover {
				min-height: 150px;

				img {
					min-width: 50% !important;
					min-height: 125px !important;
				}
			}

			.ant-card-body {
				.ant-typography {
					margin-top: @margin-3;
					min-height: 75px;
				}
			}
		}
	}
}

/* File a Claim Form Section */
.file-claim-container {
	padding: @section-padding;
	min-height: 2089px;

	.title {
		text-align: center;
		margin-bottom: 60px;

		span {
			color: @primary-color;
		}
	}

	.content {
		.desc {
			text-align: center;
			margin-bottom: 50px;
		}

		.sub-heading {
			text-align: center;
			margin-bottom: @margin-5;

			span {
				color: @primary-color;
			}
		}
	}
}

